# Acoi

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Source/: App.cpp  App.h  CMakeLists.txt  Core.h  Main.cpp  StdAfx.h
Source/Editor/: Editor.cpp  Editor.h  EditorInterface.h
Source/Editor/OpenCV/: FaceDetection.cpp  FaceDetection.h  TextDetection.cpp  TextDetection.h
Source/Graphics/: Texture.cpp  Texture.h
Source/Utils/: FileDialog.cpp  FileDialog.h
Source/imgui/: imgui_impl_opengl3.cpp
